--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -19,25 +19,6 @@ load personalization
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
-    if Vagrant.has_plugin?("vagrant-cachier")
-
-       # cache at the base box level
-       config.cache.scope = :box
-
-       if $use_nfs
-         config.cache.synced_folder_opts = {
-           type: :nfs,
-           mount_options: ['rw', 'vers=3', 'tcp', 'nolock']
-         }
-       end
-
-    else
-       print "\n"
-       print "vagrant-cachier plugin has not been found.\n"
-       print "Please install it by running `vagrant plugin install vagrant-cachier`\n"
-       exit 22
-    end
-
     # disable updating the vbox guest additions in the vm
     if Vagrant.has_plugin?("vagrant-vbguest")
       config.vbguest.auto_update = false
@@ -49,7 +30,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     config.vm.define "openstack" do |openstack|
 
       openstack.vm.box = "stackinabox/openstack"
-      openstack.vm.box_version = "= 0.9.4"
+      openstack.vm.box_version = "= 0.9.6"
+      #openstack.vm.box = "openstack.box"
 
       # eth1, this will be OpenStacks's "management" network
       openstack.vm.network "private_network", ip: "192.168.27.100", adapter_ip: "192.168.27.1", netmask: "255.255.255.0", auto_config: true
@@ -59,25 +41,26 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
       config.ssh.forward_agent = true
       config.ssh.insert_key = false
+      config.ssh.shell = "bash -c 'BASH_ENV=/etc/profile exec bash'"
 
       # install bluebox or openstack theme based on environment variable os_theme setting in Personalization file
       openstack.vm.provision "shell", name: "install-theme", path: "../scripts/#{$os_theme}-theme/init.sh"
 
       # Copy docker registry credentials if they exist (from host machine to vm)
-      if File.exist?(File.expand_path(File.join("~/.docker", "config.json"), __FILE__))
-      	openstack.vm.provision "file", source: "~/.docker/config.json", destination: "/home/vagrant/.docker/config.json"
-      end
+      # if File.exist?(File.expand_path(File.join("~/.docker", "config.json"), __FILE__))
+      # 	openstack.vm.provision "file", source: "~/.docker/config.json", destination: "/home/vagrant/.docker/config.json"
+      # end
 
       if Vagrant.has_plugin?("vagrant-docker-compose")
         # sometimes is takes a second to get docker to startup
-        openstack.vm.provision "shell", inline: "sleep 20 || sudo systemctl restart docker.service || sleep 20", run: "always"
+        # openstack.vm.provision "shell", inline: "sleep 20 || sudo systemctl restart docker.service || sleep 20"
         openstack.vm.provision :docker
         openstack.vm.provision :docker_compose, 
       	  yml: "/vagrant/compose/urbancode/docker-compose.yml",
-          command_options: { rm: "", up: "-d --no-recreate --timeout 10" }, 
+          command_options: { rm: "", up: "-d --no-recreate --timeout 60" },
           project_name: "urbancode",
           compose_version: "1.8.0",
-          env: { DOCKER_HOST: "192.168.27.100:2375" },
+          options: "--host 192.168.27.100:2375",
           run: "always"
       else
       	print "\n"
@@ -112,20 +95,12 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
           vb.customize ["modifyvm", :id, "--clipboard", "disabled"]
           vb.customize ["modifyvm", :id, "--usbehci", "off"]
           vb.customize ["modifyvm", :id, "--vrde", "off"]
+          vb.customize ["guestproperty", "set", :id, "/VirtualBox/GuestAdd/VBoxService/--timesync-set-threshold", 10000]
       end
 
       # finalize settings for aio build
       openstack.vm.provision "shell", name: "init-aio", path: "../scripts/aio/init.sh"
 
-    end
-
-    if Vagrant.has_plugin?("vagrant-multi-hostsupdater")
-      config.multihostsupdater.aliases = {'192.168.27.100' => ['openstack.stackinabox.io', 'bluebox.stackinabox.io', 'docker.stackinabox.io', 'heat.stackinabox.io', 'designer.stackinabox.io', 'ucd.stackinabox.io', 'registry.stackinabox.io', 'docker.stackinabox.io', 'agent.stackinabox.io', 'blueprintdb.stackinabox.io']}
-    else
-        print "\n"
-        print "vagrant-multi-hostsupdater plugin has not been found.\n"
-        print "Please install it by running `vagrant plugin install vagrant-multi-hostsupdater`\n"
-        exit 22
     end
 
 end
